# acwj

./: CMakeLists.txt
executable/: acwj_execute
include/: data.h  defs.h
src/: main.c  scan.c
